GNOME Bugzilla – Bug 686383
user-accounts: wrong sensitivity of the autologin combo
Last modified: 2013-03-21 11:42:19 UTC
Created attachment 226742 [details] [review] user-accounts: fix wrong sensitivity of the autologin combo The autologin combo in user account panel is wrongly changing its sensitivity (if the panel is locked). Steps to reproduce: 1) Open user accounts (the autologin combo is insensitive). 2) Change name, language or password. 3) The autologin combo is sensitive now, but it shouldn't (the panel is still locked). I have attached patch to fix it.
Review of attachment 226742 [details] [review]: ::: panels/user-accounts/um-user-panel.c @@ +594,2 @@ g_signal_handlers_unblock_by_func (widget, autologin_changed, d); I don't think taking this out entirely is correct. You are right that we don't want to make the switch sensitive just because the account is not disabled, but we most do want to make the switch insensitive if the account _is_ disabled. So, I suggest this should instead be: if (um_user_get_locked (user)) gtk_widget_set_sensitive (widget, FALSE);
Created attachment 226799 [details] [review] user-accounts: fix wrong sensitivity of the autologin combo You are right, I'm sorry, so there is fixed patched...
Review of attachment 226799 [details] [review]: Looks good.
Attachment 226799 [details] pushed as e7722d9 - user-accounts: fix wrong sensitivity of the autologin combo
*** Bug 695922 has been marked as a duplicate of this bug. ***
*** Bug 695923 has been marked as a duplicate of this bug. ***