user-accounts: fix wrong sensitivity of the autologin combo

https://bugzilla.gnome.org/show_bug.cgi?id=686383